--- a/drivematch/package.json
+++ b/drivematch/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.24",
     "lightningcss": "^1.30.2",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5",
+    "recharts": "^3.4.1",
     "tailwindcss": "^4.1.17",
     "vite": "^5.4.21"
   },
